--- a/LeaveManagement/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 Leave Management
                              </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Leave Management Types</a></li>
+                                <li><a class="dropdown-item"asp-controller="LeaveTypes" asp-action="Index">Leave Management Types</a></li>
                                 <li><a class="dropdown-item" href="#">Leave Management Allocations</a></li>
                                 <li><a class="dropdown-item" href="#">Leave Management Request</a></li>
                                 <li><a class="dropdown-item" href="#">Employe Management </a></li>
